// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRequestModalComponent should show empty fields 1`] = `
<tm-edit-request-modal
  accountRequestComments=""
  accountRequestCountry=""
  accountRequestEmail=""
  accountRequestInstitution=""
  accountRequestName=""
  activeModal={[Function NgbActiveModal]}
  castAsInputElement={[Function Function]}
  castAsTextAreaElement={[Function Function]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    class="modal-header bg-primary"
  >
    <h5
      class="modal-title text-white"
    >
      <div>
        Edit Account Request for 
      </div>
    </h5>
    <button
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
    id="reject-account-request-modal"
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label mb-1"
        for="request-name"
      >
        <b>
          Name:
        </b>
      </label>
      <input
        class="form-control"
        id="request-name"
        type="text"
      />
    </div>
    <div
      class="mb-3"
    >
      <label
        class="form-label mb-1"
        for="request-email"
      >
        <b>
          Email:
        </b>
      </label>
      <input
        class="form-control"
        id="request-email"
        type="text"
      />
    </div>
    <div
      class="mb-3"
    >
      <label
        class="form-label mb-1"
        for="request-institution"
      >
        <b>
          Institution:
        </b>
      </label>
      <input
        class="form-control"
        id="request-institution"
        type="text"
      />
    </div>
    <div
      class="mb-3"
    >
      <label
        class="form-label mb-1"
        for="request-country"
      >
        <b>
          Country:
        </b>
      </label>
      <input
        class="form-control"
        id="request-country"
        type="text"
      />
    </div>
    <div
      class="mb-0"
    >
      <label
        class="form-label mb-1"
        for="request-comments"
      >
        <b>
          Comments:
        </b>
      </label>
      <textarea
        class="form-control"
        id="request-comments"
        rows="5"
      />
    </div>
  </div><div
    class="modal-footer"
  >
    <button
      class="btn btn-light"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      id="btn-confirm-edit-request"
      type="button"
    >
       Save 
    </button>
  </div>
</tm-edit-request-modal>
`;

exports[`EditRequestModalComponent should show populated data 1`] = `
<tm-edit-request-modal
  accountRequestComments={[Function String]}
  accountRequestCountry={[Function String]}
  accountRequestEmail={[Function String]}
  accountRequestInstitution={[Function String]}
  accountRequestName={[Function String]}
  activeModal={[Function NgbActiveModal]}
  castAsInputElement={[Function Function]}
  castAsTextAreaElement={[Function Function]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    class="modal-header bg-primary"
  >
    <h5
      class="modal-title text-white"
    >
      <div>
        Edit Account Request for John Doe
      </div>
    </h5>
    <button
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
    id="reject-account-request-modal"
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label mb-1"
        for="request-name"
      >
        <b>
          Name:
        </b>
      </label>
      <input
        class="form-control"
        id="request-name"
        type="text"
      />
    </div>
    <div
      class="mb-3"
    >
      <label
        class="form-label mb-1"
        for="request-email"
      >
        <b>
          Email:
        </b>
      </label>
      <input
        class="form-control"
        id="request-email"
        type="text"
      />
    </div>
    <div
      class="mb-3"
    >
      <label
        class="form-label mb-1"
        for="request-institution"
      >
        <b>
          Institution:
        </b>
      </label>
      <input
        class="form-control"
        id="request-institution"
        type="text"
      />
    </div>
    <div
      class="mb-3"
    >
      <label
        class="form-label mb-1"
        for="request-country"
      >
        <b>
          Country:
        </b>
      </label>
      <input
        class="form-control"
        id="request-country"
        type="text"
      />
    </div>
    <div
      class="mb-0"
    >
      <label
        class="form-label mb-1"
        for="request-comments"
      >
        <b>
          Comments:
        </b>
      </label>
      <textarea
        class="form-control"
        id="request-comments"
        rows="5"
      />
    </div>
  </div><div
    class="modal-footer"
  >
    <button
      class="btn btn-light"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      id="btn-confirm-edit-request"
      type="button"
    >
       Save 
    </button>
  </div>
</tm-edit-request-modal>
`;
